...
                                        <state key="normal">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Login">
                                                    <attributes>
                                                        <font key="NSFont" metaFont="system" size="25"/>
...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="usernameTextField" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="8B9-p1-21R">
                                        <rect key="frame" x="77" y="344" width="273" height="34"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" spellCheckingType="no" keyboardType="alphabet" returnKeyType="continue" smartInsertDeleteType="yes" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="passwordTextField" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GHc-uR-0if">
                                        <rect key="frame" x="77" y="417" width="273" height="34"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" restorationIdentifier="rememberme" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T9Y-yd-Nyv">
                                        <rect key="frame" x="125" y="475" width="51" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="rememberme"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ovv-u3-hQX">
                                <rect key="frame" x="139.5" y="272" width="135.5" height="26"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="752" restorationIdentifier="submit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nGF-8a-tFa" use
                                <rect key="frame" x="143.5" y="577" width="127" height="86"/>
                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
            <objects>
                <navigationController id="vVb-OL-4h3" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="pencil.slash" catalog="system" selectedImage="pencil.slash" id="MAI-bc-dV1"/>
                    <navigationItem key="navigationItem" id="GoX-WH-wQA"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="i29-hK-4LS">
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="usernamelabel" text="test" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="4" translatesAutoresizingMaskIntoConstraints="NO" id="zaf-3K-9y1">
                                <rect key="frame" x="190.5" y="438.5" width="33" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="usernamelabel"/>
...
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Item" id="rkZ-wM-hOb">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" restorationIdentifier="changeAccount" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="UxY-SK-CP0">
                                <rect key="frame" x="372" y="0.0" width="22" height="44"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
