...
    //          error - Error                       //
    //**********************************************//
    func webView(_ webView: WKWebView, didFail navigation: WKNavigation!, withError error: Error) {
        Activity.stopAnimating()
        let alert = UIAlertController(title: "Error Loading File", message:
            "Please check your connection and try again.", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Dismiss", style: .default))
        self.present(alert, animated: true, completion: nil)
    }
    
}

